<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_marginTop="35dp"
    android:layout_marginBottom="20dp"
    tools:context=".presentation.TournamentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/tournamentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="340dp"
            android:text="@string/tournamentTitle"
            android:textAlignment="center"
            android:textColor="?attr/colorOnBackground"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <ImageButton
            android:id="@+id/editTitleButton"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:maxHeight="30dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/editTitleDescription"
            android:scaleType="centerInside"
            android:src="@drawable/edit_1483_svgrepo_com"
            app:tint="?attr/colorOnBackground" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="4dp">

        <LinearLayout
            android:id="@+id/roundsCard"
            android:orientation="vertical"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/card_background"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:gravity="center">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:src="@drawable/list_ordered_svgrepo_com"
                android:padding="8dp"
                android:background="?attr/selectableItemBackground"
                app:tint="?attr/colorOnBackground"
                android:contentDescription="@string/roundsListDescription"/>

            <TextView
                android:id="@+id/roundsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/roundsText"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="?attr/colorOnBackground"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/playersCard"
            android:orientation="vertical"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/card_background"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:src="@drawable/user_svgrepo_com"
                android:padding="8dp"
                android:background="?attr/selectableItemBackground"
                app:tint="?attr/colorOnBackground"
                android:contentDescription="@string/playersIconDescription"/>

            <TextView
                android:id="@+id/playersTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playersText"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="?attr/colorOnBackground"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="4dp">
        <LinearLayout
            android:id="@+id/tableCard"
            android:orientation="vertical"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/card_background"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:gravity="center">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:contentDescription="@string/tableIconDescription"
                android:src="@drawable/table_layout_svgrepo_com"
                android:padding="8dp"
                android:background="?attr/selectableItemBackground"
                app:tint="?attr/colorOnBackground"/>

            <TextView
                android:id="@+id/tableTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tableText"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="?attr/colorOnBackground"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/classificationCard"
            android:orientation="vertical"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/card_background"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:gravity="center">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:src="@drawable/podium_with_cup_svgrepo_com"
                android:padding="8dp"
                android:background="?attr/selectableItemBackground"
                app:tint="?attr/colorOnBackground"
                android:contentDescription="@string/classificationIconDescription"/>

            <TextView
                android:id="@+id/classificationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/classificationText"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="?attr/colorOnBackground"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Guardar Torneo"
            android:layout_marginTop="16dp"
            android:backgroundTint="@android:color/holo_green_light"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/exitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exitText"
            android:layout_marginTop="16dp"
            android:backgroundTint="@android:color/holo_red_dark"
            android:textColor="@android:color/white"/>
    </LinearLayout>

</LinearLayout>